2006-12-11  Vlad Seryakov  <seryakov@users.sf.net>

        * nsd.nsd.h:
        * nsd/driver.c:
        * sample-config.tcl.in:
        * nsd-config.tcl: Added optional parameter to drivers "acceptsize" that
        is 1 by default, if set to higher number it will tell the driver to
        accept more than one request, which as tests showed helps to process
        more requests, because if we have many sockets in the driver's queue it takes
        time to scan all of them and new requests are waiting to be accepted. Some
        benchmarking showed that if set to 10 it improves req/sec rate by 10% on simple
        ADP requests. If not set, driver works as usually.

2006-12-07  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/init.tcl: Fixed bug in ns_eval initialization using
	non-existent nsv array

2006-12-04  Vlad Seryakov  <seryakov@users.sf.net>

	* Makefile:
	* index.adp: Minor changes to make installation work and smoothed some edges

2006-11-29  Vlad Seryakov  <seryakov@users.sf.net>

	* doc/src/ns_mutex.man:
	* nsd/tclthread.c: Added ns_mutex trylock command to Tcl API,
	this is valid C API function, return 0 on lock or < 0 if already locked

2006-11-28  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c:
	* doc/src/ns_writer.man:
	* contrib/examples/writer.tcl: Updated ns_writer command to
	support submitfile which was broken. Aed additional arguments to
	make it flexible in returning parts of file via wruter thread. Added
	example of ns_writer usage.

	* nsd/driver.c: Updated Writer functions to Tcl_WideInt to support
	files over 2Gb in size. Still a lot of routines need to be updated
	which return files, like Ns_ConnSend and etc. The minor obstacle also
	that GNU printf checker does not support new formats like %q in
	Ns_DStringPrintf.

	* nsd/ns.h:
	* nsd/fastpath.c:
	* nsd/return.c:
	* nsd/connio.c:
	* nsd/driver.c:
	* nsd/nsd.h: Writer thread currently is the only way to return files